2014-06-25 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Fix potential bugs of flags affection in inst_sbc() and inst_cpw().
        * sim/ucsim/stm8.src/stm8.cc:
          Fix potential bugs of flags affection in RLWA, and improve code quality of TRAP.

2014-06-21 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Fix potential bugs of flags affection in inst_addw(), inst_sub() and inst_cp().
        * sim/ucsim/stm8.src/stm8.cc:
          Fix potential bugs of flags affection in simulation of RRWA.

2014-06-20 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Fix potential bugs of flags affection in inst_addw().

2014-06-17 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Make the comment more understandable, fix potential bugs in inst_jr(). (JRSGT / JRSLE / JRSGE / JRSLT)

2014-06-10 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Add indirect addressing handling in CLR, CPW & LD. Fix potential bugs in get_dest().

2014-06-03 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/stm8.src/inst.cc,
	  support/regression/tests/gcc-torture-execute-20021120-1.c:
	  Fix bug #2180 by applying patch #244 by Ben Shi.

2014-06-02 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/Makefile.in:
	  Fix non-standard end-of-line matching (makes device libraries compile on OpenBSD).

2014-05-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix a bug in code generation for right shift by applying patch #243 by Ben Shi.

2014-05-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc2.cc:
	  Fix complement bug #2275.

2014-05-22 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* sim/ucsim/stm8.src/stm8.cc:
	  Fix flag handling, patch by Ben Shi.
	* src/stm8/gen.c:
	  Enable some shift optimizations that need the flag handling fix.
